Update viewport meta tag to fix scaling bug on IOS and removed input container shadow

--- a/styles/index.css
+++ b/styles/index.css
@@ -41,6 +41,7 @@ main {
 #input-desc {
     width: 100%;
     height: 50px;
+
     padding: 10px 20px;
     box-sizing: border-box;
     border: none;
@@ -495,7 +496,6 @@ ul#ul-el {
         position: sticky;
         top: 0;
         z-index: 1000;
-        filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
     }
 
     .header,
